feat: create swagger for api routes
